# video-call-service

./: .envrc.example  .gitignore  CMakeLists.txt  GNUmakefile  README.md
client/: CMakeLists.txt  Info.plist.in
client/src/: FrameHandler.cpp  FrameHandler.h  MainWindow.cpp  MainWindow.h  UdpFragmentReassembler.cpp  UdpFragmentReassembler.h  UdpMediaClient.cpp  UdpMediaClient.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoPreview.cpp  VideoPreview.h  main.cpp  utils.h
server/: CMakeLists.txt  README.md
server/src/: ConnectionHandler.cpp  ConnectionHandler.h  TcpServer.cpp  TcpServer.h  UdpRelay.cpp  UdpRelay.h  main.cpp
shared/: Protocol.h  README.md  SharedTypes.h
tests/: CMakeLists.txt  README.md
tests/client/: CMakeLists.txt  FrameHandlerTest.cpp  MainWindowTest.cpp  ProtocolTest.cpp  UdpFragmentReassemblerTest.cpp
tests/server/: CMakeLists.txt  UdpRelayTest.cpp  main.cpp
